--- a/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Taobao/index.html.twig
@@ -20,7 +20,7 @@
             <div class="taobaoSearch"> {{ render(controller('JiliFrontendBundle:Taobao:searchBox' ) ) }} </div>
             <div id="tabs"> 
                 <ul class="ltab">
-                    {% for item in category %}
+                    {% for item in categorys %}
                     <li id="{{item.id}}"><a href="javascript:void(0);">{{item.categoryName}}</a></li>
                     {% endfor %}
                 </ul>
@@ -48,7 +48,6 @@
         s.src = "http://a.alimama.cn/tkapi.js";
         h.insertBefore(s, h.firstChild);
     }
-    ;
     var o = { pid: "mm_49376465_4372428_26502700", /*推广单元ID，用于区分不同的推广渠道*/ appkey: "", /*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/ unid: ""/*自定义统计字段*/ };
     win.alimamatk_onload = win.alimamatk_onload || [];
     win.alimamatk_onload.push(o);
