--- a/src/Jili/FrontendBundle/Resources/views/alimama.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/alimama.html.twig
@@ -7,9 +7,10 @@
         s.src = "http://a.alimama.cn/tkapi.js";
         h.insertBefore(s, h.firstChild);
     }
-    var o = { pid: {{ pid }}, /*推广单元ID，用于区分不同的推广渠道*/
-    appkey: "", /*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/
-    unid: ""/*自定义统计字段*/ };
+    var o = { pid: "{{ pid }}", /*推广单元ID，用于区分不同的推广渠道*/
+        appkey: "", /*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/
+        unid: ""/*自定义统计字段*/ 
+    };
     win.alimamatk_onload = win.alimamatk_onload || [];
     win.alimamatk_onload.push(o);
 
