--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/taskHistory.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/taskHistory.html.twig
@@ -30,15 +30,11 @@
 					<tr>
 						<td>{% if item.createTime %}{{ item.createTime.date | date('Y-m-d') }}{% endif %}</td>
 						<td>{% if item.incentiveType==92 or item.incentiveType==93 %}{% else %}
-						     {{ item.displayName }}-{% endif %}{% if item.adid %}
-	                  		<a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">  {{ item.title }}</a>
+						     {{ item.displayName }}-{% endif %}{% if item.adid %}{{ item.title }}
 						{% else%}
-							{% if item.incentiveType == 17 %}
-							<a href="{{ path('_advertiserment_list') }}" target="_blank">{{ item.title }}</a>
-							{% elseif item.incentiveType == 18 %}
-							<a href="{{ asset(path('_advertiserment_offer99')) }}" target="_blank">{{ item.title }}</a>
-							{% elseif item.incentiveType == bangwoya_com.category_type %}
-							<a href="{{ asset(path('_advertiserment_bangwoya')) }}" target="_blank">{{ item.title }}</a>
+							{% if item.incentiveType == 17 %}{{ item.title }}
+							{% elseif item.incentiveType == 18 %}{{ item.title }}
+							{% elseif item.incentiveType == bangwoya_com.category_type %}{{ item.title }}
 							{% else %}
 							{{ item.title }}
 							{% endif %}
