--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
@@ -20,6 +20,8 @@
 		{% include 'WenwenFrontendBundle:Advertisement:_hallNavs.html.twig' %} 
 		<div class="tabCon offerWow">
 			<iframe src='#' style='width:720px;height:560px;' scrolling='no' frameborder='no' border='0' allowTransparency='true'></iframe>
+			<input type="hidden" value="{{  offerwow_com.websiteid }}" id="websiteid">
+			<input type="hidden" value="{{  app.session.get('uid') }}" id="memberid">
 			<div class="taskFlow">
 				<h4>轻松3步，领取奖励</h4>
 				<div class="conWrapper">
