--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/index.html.twig
@@ -21,6 +21,36 @@
             <ul id="surveyList">
             {% set has_tip_displayed = 0 %}
                 {# SSI permission #}
+            {%  if (ssi_respondent is null or ssi_res.needPrescreening) %}
+                {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
+                        {
+                            'type_class': 'trade',
+                            'type_desc': '高积分问卷，基于您回答的属性问卷发送给您。有名额和日期限制，请尽快回答',
+                            'type_label': '商业问卷',
+                            'end_date': '--',
+                            'num': '--',
+                            'title': '申请参与SSI海外市场调查项目',
+                            'answered': false,
+                            'url': path('_ssi_partner_permission'),
+                            'point':1,
+                            'answer_status_label': '投票',
+                            'tip': has_tip_displayed ? null : '赶快加入SSI海外项目，可获更多高分问卷！'
+                        } ) }}
+                {% set has_tip_displayed = 1 %}
+            {% elseif ssi_res.isActive and ssi_surveys %}
+                {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
+                      {
+                            'type_class': 'trade',
+                            'type_desc': '高积分问卷，基于您回答的属性问卷发送给您。有名额和日期限制，请尽快回答',
+                            'type_label': '商业问卷',
+                            'end_date': '--',
+                            'num': 's' + ssi_surveys[0].ssiProjectId,
+                            'title': ssi_project_config.title,
+                            'answered': false,
+                            'url': path('_ssi_project_survey_cover', {'survey_id': ssi_surveys[0].ssiProjectId}),
+                            'point': ssi_project_config.point,
+                      } ) }}
+            {% endif %}
 			</ul>
             {{ include( 'WenwenFrontendBundle:Survey:_sopSurveyList.html.twig', {'sop_params': sop_params, 'preview': preview} ) }}
             <div id="noSurvey">
