--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -196,6 +196,7 @@ $slider-height: 305px;
 	width: 165px;
 	float: left;
 	margin-right: 42px;
+	margin-right: 35px\9;
 }
 .mainAdTop ul li:last-child{
 	margin-right: 0;
